@@ -1,0 +1,6 @@
+use Clutter::TestHelper tests => 3;
+
+my $box = Clutter::HBox->new();
+isa_ok($box, 'Clutter::HBox', 'is an hbox');
+isa_ok($box, 'Clutter::Box', 'is a box');
+isa_ok($box, 'Clutter::Actor', 'is an actor');
